<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layout_text"
        android:textAlignment="center"
        tools:visibility="visible"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnFinish"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/tvOrientation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvOrientation"
        android:textAlignment="center"
        android:layout_margin="8dp"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cbSaveOrRestore"
        android:textAlignment="center"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnExplicit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnExplicit"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRes"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/tvActiImpli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/tvActiImpli"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAction1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onClickButtonAction1"
            android:text="@string/btnAction1" />

        <Button
            android:id="@+id/btnAction2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onClickButtonAction2"
            android:text="@string/btnAction2" />

        <Button
            android:id="@+id/btnAction3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onClickButtonActionView"
            android:text="@string/btnAction3" />
    </LinearLayout>
    />


</LinearLayout>